--- a/quem-somos.html
+++ b/quem-somos.html
@@ -54,7 +54,7 @@
 
     <header class="bg-white pt-24 pb-12">
         <div class="container mx-auto px-6 text-center">
-            <h1 class="text-4xl md:text-5xl font-extrabold text-gray-800">Conheça Nossa Chapa</h1>
+            <h1 class="text-4xl md:text-5xl font-extrabold text-gray-800">Conheça Nossa Equipe</h1>
             <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-gray-600">Um coletivo diverso, unido pelo compromisso com a base.</p>
         </div>
     </header>
@@ -68,6 +68,7 @@
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 1</h3>
                     <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
+                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
                 <!-- Fim do Exemplo de Membro -->
 
@@ -76,6 +77,7 @@
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 2</h3>
                     <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
+                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
@@ -83,6 +85,7 @@
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 3</h3>
                     <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
+                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
@@ -90,6 +93,7 @@
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 4</h3>
                     <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
+                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
@@ -97,6 +101,7 @@
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 5</h3>
                     <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
+                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
@@ -104,6 +109,7 @@
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 6</h3>
                     <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
+                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
@@ -111,6 +117,7 @@
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 7</h3>
                     <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
+                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
@@ -118,6 +125,39 @@
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 8</h3>
                     <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
+                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
+                </div>
+
+                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 9</h3>
+                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                     <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
+                </div>
+
+                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 10</h3>
+                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                     <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
+                </div>
+
+                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 11</h3>
+                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                     <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
+                </div>
+
+                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 12</h3>
+                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-gray-600 mt-2">Campus de Origem</p>
+                     <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
             </div>
         </section>
