--- a/quem-somos.html
+++ b/quem-somos.html
@@ -14,48 +14,58 @@
         }
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #F9FAFB;
-            color: #1F2937;
+            background-color: #f8f9fa;
+            color: #212529;
         }
+        :root {
+            --sind-green: #00963f;
+            --sind-red: #da1a2f;
+            --dark-gray: #343a40;
+        }
+        .text-sind-green { color: var(--sind-green); }
+        .hover-text-sind-green:hover { color: var(--sind-green); }
+        .border-sind-green { border-color: var(--sind-green); }
+        .bg-dark-gray { background-color: var(--dark-gray); }
+
         .nav-link.active {
-          color: #2563EB;
+          color: var(--sind-green);
           font-weight: 700;
         }
     </style>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-100">
 
-    <nav id="navbar" class="bg-white/80 backdrop-blur-lg shadow-md sticky top-0 z-50">
+    <nav id="navbar" class="bg-white/90 backdrop-blur-lg shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-6">
             <div class="flex items-center justify-between h-16">
-                <a href="index.html" class="text-xl font-bold text-blue-800">Chapa de Oposição</a>
+                <a href="index.html" class="text-xl font-bold text-sind-green">Chapa de Oposição</a>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html#inicio" class="nav-link text-gray-600 hover:text-blue-600 transition">Início</a>
-                    <a href="quem-somos.html" class="nav-link active text-gray-600 hover:text-blue-600 transition">Quem Somos</a>
-                    <a href="index.html#prioridades" class="nav-link text-gray-600 hover:text-blue-600 transition">Propostas</a>
-                    <a href="index.html#pilares" class="nav-link text-gray-600 hover:text-blue-600 transition">Pilares</a>
-                    <a href="index.html#diretorias" class="nav-link text-gray-600 hover:text-blue-600 transition">Diretorias</a>
+                    <a href="index.html#inicio" class="nav-link text-gray-700 hover-text-sind-green transition">Início</a>
+                    <a href="quem-somos.html" class="nav-link active text-gray-700 hover-text-sind-green transition">Quem Somos</a>
+                    <a href="index.html#prioridades" class="nav-link text-gray-700 hover-text-sind-green transition">Propostas</a>
+                    <a href="index.html#pilares" class="nav-link text-gray-700 hover-text-sind-green transition">Pilares</a>
+                    <a href="index.html#diretorias" class="nav-link text-gray-700 hover-text-sind-green transition">Diretorias</a>
                 </div>
                 <div class="md:hidden flex items-center">
-                    <button id="mobile-menu-button" class="text-gray-600 hover:text-blue-600 focus:outline-none">
+                    <button id="mobile-menu-button" class="text-gray-600 hover-text-sind-green focus:outline-none">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                     </button>
                 </div>
             </div>
         </div>
         <div id="mobile-menu" class="hidden md:hidden">
-            <a href="index.html#inicio" class="block py-2 px-6 text-sm text-gray-600 hover:bg-gray-100">Início</a>
-            <a href="quem-somos.html" class="block py-2 px-6 text-sm text-gray-600 hover:bg-gray-100">Quem Somos</a>
-            <a href="index.html#prioridades" class="block py-2 px-6 text-sm text-gray-600 hover:bg-gray-100">Propostas</a>
-            <a href="index.html#pilares" class="block py-2 px-6 text-sm text-gray-600 hover:bg-gray-100">Pilares</a>
-            <a href="index.html#diretorias" class="block py-2 px-6 text-sm text-gray-600 hover:bg-gray-100">Diretorias</a>
+            <a href="index.html#inicio" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Início</a>
+            <a href="quem-somos.html" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Quem Somos</a>
+            <a href="index.html#prioridades" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Propostas</a>
+            <a href="index.html#pilares" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Pilares</a>
+            <a href="index.html#diretorias" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Diretorias</a>
         </div>
     </nav>
 
     <header class="bg-white pt-24 pb-12">
         <div class="container mx-auto px-6 text-center">
-            <h1 class="text-4xl md:text-5xl font-extrabold text-gray-800">Conheça Nossa Equipe</h1>
-            <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-gray-600">Um coletivo diverso, unido pelo compromisso com a base.</p>
+            <h1 class="text-4xl md:text-5xl font-extrabold text-sind-green">Conheça Nossa Chapa</h1>
+            <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-gray-600">Um coletivo diverso de docentes e técnicos, da ativa e aposentados, unidos pelo compromisso com a base.</p>
         </div>
     </header>
 
@@ -64,115 +74,75 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
                 <!-- Exemplo de Membro - Repita este bloco para cada membro -->
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 1</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
-                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
                 <!-- Fim do Exemplo de Membro -->
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 2</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
-                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 3</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
-                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 4</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
-                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 5</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
-                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 6</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
-                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 7</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
-                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
+                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
                     <h3 class="text-xl font-bold text-gray-800">Nome do Membro 8</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
+                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
-                    <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
-                </div>
-
-                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 9</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                     <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
-                </div>
-
-                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 10</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                     <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
-                </div>
-
-                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 11</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                     <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
-                </div>
-
-                 <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/E2E8F0/4A5568?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-blue-200">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 12</h3>
-                    <p class="text-blue-700 font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                     <p class="text-gray-600 mt-2">Cargo (TAE/EBTT)</p>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer class="bg-gray-800 text-white mt-16">
+    <footer class="bg-dark-gray text-white mt-16">
         <div class="container mx-auto px-6 py-8 text-center">
-            <h3 class="text-2xl font-bold">Junte-se à Mudança</h3>
+            <h3 class="text-2xl font-bold text-sind-green">Junte-se à Mudança</h3>
             <p class="mt-4 max-w-2xl mx-auto">Siga-nos nas redes sociais, participe dos debates e ajude a construir o sindicato que a nossa categoria merece.</p>
             <div class="flex justify-center space-x-6 mt-6">
-                <a href="https://facebook.com" target="_blank" class="text-gray-400 hover:text-white transition">Facebook</a>
-                <a href="https://instagram.com" target="_blank" class="text-gray-400 hover:text-white transition">Instagram</a>
-                <a href="https://whatsapp.com" target="_blank" class="text-gray-400 hover:text-white transition">WhatsApp</a>
+                <a href="https://facebook.com" target="_blank" class="text-gray-300 hover:text-white transition">Facebook</a>
+                <a href="https://instagram.com" target="_blank" class="text-gray-300 hover:text-white transition">Instagram</a>
+                <a href="https://whatsapp.com" target="_blank" class="text-gray-300 hover:text-white transition">WhatsApp</a>
             </div>
-            <p class="mt-8 text-sm text-gray-500">© 2025 Chapa de Oposição "Xxxxxx xx Xxxxxxxxxxxx". Todos os direitos reservados.</p>
+            <p class="mt-8 text-sm text-gray-400">© 2025 Chapa de Oposição "Xxxxxx xx Xxxxxxxxxxxx". Todos os direitos reservados.</p>
         </div>
     </footer>
 
