--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="flex justify-center space-x-6 mt-6">
                 <a href="https://facebook.com" target="_blank" class="text-gray-300 hover:text-white transition">Facebook</a>
                 <a href="https://instagram.com" target="_blank" class="text-gray-300 hover:text-white transition">Instagram</a>
-                <a href="https://whatsapp.com" target="_blank" class="text-gray-300 hover:text-white transition">WhatsApp</a>
+                <a href="https://chat.whatsapp.com/G4lc95bvV0y0Lc0teTJyiO" target="_blank" class="text-gray-300 hover:text-white transition">WhatsApp</a>
             </div>
             <p class="mt-8 text-sm text-gray-400">© 2025 Chapa de Oposição "Xxxxxx xx Xxxxxxxxxxxx". Todos os direitos reservados.</p>
         </div>
