--- a/apoie.html
+++ b/apoie.html
@@ -80,7 +80,7 @@
             <div class="max-w-4xl mx-auto bg-white p-8 rounded-2xl shadow-lg">
                 <div class="text-center mb-10">
                     <h2 class="text-2xl font-bold text-gray-800 mb-2">Total Arrecadado</h2>
-                    <p id="total-arrecadado" class="text-5xl font-extrabold text-sind-green">R$ 0,00</p>
+                    <p id="total-arrecadado" class="text-5xl font-extrabold text-sind-green">R$ 00,00</p>
                     <p class="text-gray-500 mt-2">Meta: R$ 10.000,00</p>
                 </div>
 
@@ -89,8 +89,8 @@
                         <h3 class="text-2xl font-bold text-gray-800 mb-4">Doe via PIX</h3>
                         <p class="text-gray-600 mb-4">Você pode contribuir com qualquer valor utilizando a nossa chave PIX. Toda ajuda é bem-vinda e fará a diferença!</p>
                         <div class="bg-gray-100 p-4 rounded-lg">
-                            <p class="text-gray-500">Chave PIX (CNPJ):</p>
-                            <p id="pix-key" class="text-xl font-mono text-gray-800 break-words">XX.XXX.XXX/0001-XX</p>
+                            <p class="text-gray-500">Chave PIX (e-mail):</p>
+                            <p id="pix-key" class="text-xl font-mono text-gray-800 break-words">coletivo.ops2025@gmail.com</p>
                         </div>
                         <button onclick="copyPix()" class="mt-4 bg-sind-green text-white font-bold py-2 px-4 rounded-lg hover:bg-green-700 transition w-full md:w-auto">
                             Copiar Chave PIX
