--- a/diretorias.html
+++ b/diretorias.html
@@ -1,55 +1,81 @@
+
+### **Página "Diretorias" (diretorias.html) - ATUALIZADA**
+```html
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diretorias | Chapa de Oposição</title>
+    <title>Diretorias | Voz da Base</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f8f9fa;
-            color: #212529;
-        }
-        :root {
-            --sind-green: #00963f;
-            --sind-red: #da1a2f;
-            --dark-gray: #343a40;
-        }
+        html, body { height: 100%; }
+        body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; color: #212529; display: flex; flex-direction: column; }
+        main { flex-grow: 1; }
+        :root { --sind-green: #00963f; --sind-red: #da1a2f; --dark-gray: #343a40; }
         .text-sind-green { color: var(--sind-green); }
+        .bg-sind-green { background-color: var(--sind-green); }
+        .hover-text-sind-green:hover { color: var(--sind-green); }
         .border-sind-green { border-color: var(--sind-green); }
-        .accordion-card .details {
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.5s ease-out, padding 0.5s ease-out;
-            padding-top: 0;
-            padding-bottom: 0;
-        }
-        .accordion-card.active .details {
-            max-height: 500px;
-            padding-top: 1rem;
-            padding-bottom: 1rem;
-        }
+        .bg-dark-gray { background-color: var(--dark-gray); }
+        .nav-link.active { color: var(--sind-green); font-weight: 700; }
+        .accordion-card .details { max-height: 0; overflow: hidden; transition: max-height 0.5s ease-out, padding 0.5s ease-out; padding-top: 0; padding-bottom: 0; }
+        .accordion-card.active .details { max-height: 500px; padding-top: 1rem; padding-bottom: 1rem; }
         .accordion-card.active .icon-toggle .plus-icon { transform: rotate(45deg); }
         .icon-toggle .plus-icon { transition: transform 0.3s ease-in-out; }
     </style>
 </head>
 <body class="bg-gray-100">
-
+    <nav id="navbar" class="bg-white/90 backdrop-blur-lg shadow-md sticky top-0 z-50">
+        <div class="container mx-auto px-6">
+            <div class="flex items-center justify-between h-16">
+                <a href="index.html" class="text-xl font-bold text-sind-green">Voz da Base</a>
+                <div class="hidden md:flex items-center space-x-8">
+                    <a href="index.html" class="nav-link text-gray-700 hover-text-sind-green transition">Início</a>
+                    <a href="quem-somos.html" class="nav-link text-gray-700 hover-text-sind-green transition">Quem Somos</a>
+                    <a href="apoie.html" class="nav-link text-gray-700 hover-text-sind-green transition">Apoie</a>
+                    <a href="diretorias.html" class="nav-link active text-gray-700 hover-text-sind-green transition">Diretorias</a>
+                </div>
+                <div class="md:hidden flex items-center">
+                    <button id="mobile-menu-button" class="text-gray-600 hover-text-sind-green focus:outline-none">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div id="mobile-menu" class="hidden md:hidden">
+            <a href="index.html" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Início</a>
+            <a href="quem-somos.html" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Quem Somos</a>
+            <a href="apoie.html" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Apoie</a>
+            <a href="diretorias.html" class="block py-2 px-6 text-sm text-gray-700 hover:bg-gray-200">Diretorias</a>
+        </div>
+    </nav>
+    <header class="bg-white pt-24 pb-12">
+        <div class="container mx-auto px-6 text-center">
+            <h1 class="text-4xl md:text-5xl font-extrabold text-sind-green">Propostas para as Diretorias</h1>
+            <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-gray-600">Conectamos nosso plano de ação à estrutura oficial do sindicato. Veja como nossas propostas se traduzem em atuação direta em cada diretoria e contribua com novas ideias.</p>
+        </div>
+    </header>
     <main class="container mx-auto p-4 md:p-8">
         <section id="diretorias-content">
-             <div class="text-center mb-12">
-                <h1 class="text-4xl md:text-5xl font-extrabold text-sind-green">Propostas para as Diretorias</h1>
-                <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto text-gray-600">Conectamos nosso plano de ação à estrutura oficial do sindicato. Veja como nossas propostas se traduzem em atuação direta em cada diretoria e contribua com novas ideias.</p>
-            </div>
-            <div id="directorates-container" class="space-y-4">
-            </div>
+            <div id="directorates-container" class="space-y-4"></div>
         </section>
     </main>
-
+    <footer class="bg-dark-gray text-white mt-16">
+        <div class="container mx-auto px-6 py-8 text-center">
+            <h3 class="text-2xl font-bold text-sind-green">Junte-se à Mudança</h3>
+            <p class="mt-4 max-w-2xl mx-auto">Siga-nos nas redes sociais, participe dos debates e ajude a construir o sindicato que a nossa categoria merece.</p>
+            <div class="flex justify-center space-x-6 mt-6">
+                <a href="https://facebook.com" target="_blank" class="text-gray-300 hover:text-white transition">Facebook</a>
+                <a href="https://instagram.com" target="_blank" class="text-gray-300 hover:text-white transition">Instagram</a>
+                <a href="https://whatsapp.com" target="_blank" class="text-gray-300 hover:text-white transition">WhatsApp</a>
+            </div>
+            <p class="mt-8 text-sm text-gray-400">© 2025 Chapa "Voz da Base". Todos os direitos reservados.</p>
+        </div>
+    </footer>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const directorates = [
@@ -65,7 +91,6 @@
                 { name: 'Diretoria de Sindicalizados e Política Sindical', related: ['Campanhas de Sindicalização', 'Protocolo de Greve', 'Diálogo Permanente com Federações'], new_ideas_prompt: 'Que estratégias podemos criar para aumentar a sindicalização e o engajamento da categoria nas atividades sindicais?' },
                 { name: 'Diretoria de Organização Sindical', related: ['Fortalecimento dos NSBs e Interiorização', 'Gestão Colegiada e Democrática', 'Processo Estatuinte Participativo'], new_ideas_prompt: 'Como podemos garantir que a reestruturação proposta (gestão colegiada, novo estatuto) seja implementada de forma democrática?' },
             ];
-
             function createAccordionCards(containerId, data, cardClass, titleField, detailsField) {
                  const container = document.getElementById(containerId);
                  if (!container) return;
@@ -77,36 +102,28 @@
                             <div class="flex items-center w-full">
                                 <h3 class="font-bold text-gray-800 flex-1">${item[titleField]}</h3>
                             </div>
-                            <div class="icon-toggle text-sind-green">
-                               <span class="plus-icon text-2xl font-light">+</span>
-                            </div>
+                            <div class="icon-toggle text-sind-green"><span class="plus-icon text-2xl font-light">+</span></div>
                         </div>
-                        <div class="details px-5 text-gray-700">
-                           ${detailsField(item)}
-                        </div>
-                    `;
-                    card.addEventListener('click', () => {
-                        card.classList.toggle('active');
-                    });
+                        <div class="details px-5 text-gray-700">${detailsField(item)}</div>`;
+                    card.addEventListener('click', () => { card.classList.toggle('active'); });
                     container.appendChild(card);
                 });
             }
-
             const directorateDetailsHTML = item => `
                 <div class="space-y-4">
                     <div>
                         <h4 class="font-semibold text-gray-700">Propostas Correlacionadas:</h4>
-                        <ul class="list-disc list-inside mt-2 space-y-1">
-                            ${item.related.map(r => `<li>${r}</li>`).join('')}
-                        </ul>
+                        <ul class="list-disc list-inside mt-2 space-y-1">${item.related.map(r => `<li>${r}</li>`).join('')}</ul>
                     </div>
                     <div class="bg-green-50 p-4 rounded-lg border-l-4 border-sind-red">
                         <h4 class="font-semibold text-sind-green">Propostas de Atuação (Contribua):</h4>
                         <p class="mt-2 text-gray-700 italic">${item.new_ideas_prompt}</p>
                     </div>
-                </div>
-            `;
+                </div>`;
             createAccordionCards('directorates-container', directorates, 'border-t-4 border-sind-green', 'name', directorateDetailsHTML);
+            const mobileMenuButton = document.getElementById('mobile-menu-button');
+            const mobileMenu = document.getElementById('mobile-menu');
+            mobileMenuButton.addEventListener('click', () => { mobileMenu.classList.toggle('hidden'); });
         });
     </script>
 </body>
