--- a/diretorias.html
+++ b/diretorias.html
@@ -26,6 +26,7 @@
     </style>
 </head>
 <body class="bg-gray-100">
+
     <nav id="navbar" class="bg-white/90 backdrop-blur-lg shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-6">
             <div class="flex items-center justify-between h-16">
@@ -61,7 +62,7 @@
             <div id="directorates-container" class="space-y-4"></div>
         </section>
     </main>
-    <footer class="bg-dark-gray text-white mt-16">
+    <footer class="bg-dark-gray text-white">
         <div class="container mx-auto px-6 py-8 text-center">
             <h3 class="text-2xl font-bold text-sind-green">Junte-se à Mudança</h3>
             <p class="mt-4 max-w-2xl mx-auto">Siga-nos nas redes sociais, participe dos debates e ajude a construir o sindicato que a nossa categoria merece.</p>
