--- a/quem-somos.html
+++ b/quem-somos.html
@@ -61,49 +61,7 @@
                     <p class="text-sind-green font-semibold">Cargo na Chapa</p>
                     <p class="text-gray-600 mt-2">Campus de Origem</p>
                 </div>
-                <!-- Fim do Exemplo de Membro -->
-                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 2</h3>
-                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                </div>
-                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 3</h3>
-                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                </div>
-                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 4</h3>
-                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                </div>
-                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 5</h3>
-                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                </div>
-                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 6</h3>
-                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                </div>
-                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 7</h3>
-                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                </div>
-                <div class="bg-white rounded-lg shadow-lg text-center p-6 transform hover:scale-105 transition-transform duration-300">
-                    <img src="https://placehold.co/200x200/e2e8f0/343a40?text=Foto" alt="Foto do Membro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-sind-green">
-                    <h3 class="text-xl font-bold text-gray-800">Nome do Membro 8</h3>
-                    <p class="text-sind-green font-semibold">Cargo na Chapa</p>
-                    <p class="text-gray-600 mt-2">Campus de Origem</p>
-                </div>
+                 <!-- Fim do Exemplo -->
             </div>
         </section>
     </main>
@@ -130,3 +88,4 @@
     </script>
 </body>
 </html>
+```
